# Xn

./: .gitignore  README.md  bot.cabal  bot.hs  update_bot
.halcyon/: constraints
Bot/: Bot.hs  Commands.hs  Config.hs  General.hs  Helpers.hs  Messaging.hs  Restarter.hs
Bot/Abbr/: Words.hs
Bot/Commands/: Abbr.hs  History.hs  Morse.hs  Rand.hs  Str.hs  Tell.hs  Time.hs  URL.hs
Bot/Config/: Basic.hs  State.hs  StateMethods.hs
