name:                bot
version:             0.1.0.0
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable bot
  main-is:             bot.hs
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.6 && <4.8, mtl >=2.2 && <2.3, old-time >=1.1 && <1.2, network >=2.6 && <2.7, random >=1.1 && <1.2, split >=0.2 && <0.3, MissingH >=1.2 && <1.3, text >=1.2 && <1.3, html-conduit >=1.1 && <1.2, xml-conduit >=1.2 && <1.3, http-conduit >=2.1 && <2.2, time >=1.4.2, unix >=2.7.0.1, safe >=0.3.8
  default-language:    Haskell2010
