name:                bot
version:             0.1.0.0
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable bot
  main-is:             bot.hs
  other-extensions:    OverloadedStrings
  build-depends:       base, mtl, old-time, network, random, split, MissingH, text, process, stm, async,
                       time, unix, safe, IfElse, hslogger, acid-state, safecopy
  default-language:    Haskell2010
